@@ -95,6 +95,10 @@ static struct argp_option cmdline_options[] =
       "Get SEL time.", 52},
     { "set-sel-time", SET_SEL_TIME_KEY,  "TIME", 0,
       "Set SEL time.  Input format = \"MM/DD/YYYY - HH:MM:SS\" or \"now\".", 53},
+    { "get-sel-time-utc-offset", GET_SEL_TIME_UTC_OFFSET_KEY,  0, 0,
+      "Get SEL time UTC offset.", 53},
+    { "set-sel-time-utc-offset", SET_SEL_TIME_UTC_OFFSET_KEY,  "OFFSET", 0,
+      "Set SEL time UTC offset.  Offset in minutes or \"none\".", 54},
     { "platform-event", PLATFORM_EVENT_KEY, "[generator_id] <event_message_format_version> <sensor_type> <sensor_number> <event_type> <event_direction> <event_data1> <event_data2> <event_data3>", 0,
       "Instruct the BMC to process the specified event data.", 54},
     { "set-sensor-reading-and-event-status", SET_SENSOR_READING_AND_EVENT_STATUS_KEY, "<sensor_number> <sensor_reading> <sensor_reading_operation> <assertion_bitmask> <assertion_bitmask_operation> <deassertion_bitmask> <deassertion_bitmask_operation> <event_data1> <event_data2> <event_data3> <event_data_operation>", 0,
@@ -242,6 +246,13 @@ cmdline_parse (int key, char *arg, struct argp_state *state)
       cmd_args->set_sel_time = 1;
       cmd_args->set_sel_time_arg = arg;
       break;
+    case GET_SEL_TIME_UTC_OFFSET_KEY:
+      cmd_args->get_sel_time_utc_offset = 1;
+      break;
+    case SET_SEL_TIME_UTC_OFFSET_KEY:
+      cmd_args->set_sel_time_utc_offset = 1;
+      cmd_args->set_sel_time_utc_offset_arg = arg;
+      break;
     case PLATFORM_EVENT_KEY:
       cmd_args->platform_event = 1;
       cmd_args->platform_event_arg = arg;
@@ -332,6 +343,8 @@ _bmc_device_args_validate (struct bmc_device_arguments *cmd_args)
       && !cmd_args->set_sdr_repository_time
       && !cmd_args->get_sel_time
       && !cmd_args->set_sel_time
+      && !cmd_args->get_sel_time_utc_offset
+      && !cmd_args->set_sel_time_utc_offset
       && !cmd_args->platform_event
       && !cmd_args->set_sensor_reading_and_event_status
       && !cmd_args->get_mca_auxiliary_log_status
@@ -362,6 +375,8 @@ _bmc_device_args_validate (struct bmc_device_arguments *cmd_args)
        + cmd_args->set_sdr_repository_time
        + cmd_args->get_sel_time
        + cmd_args->set_sel_time
+       + cmd_args->get_sel_time_utc_offset
+       + cmd_args->set_sel_time_utc_offset
        + cmd_args->platform_event
        + cmd_args->set_sensor_reading_and_event_status
        + cmd_args->get_mca_auxiliary_log_status
@@ -448,6 +463,9 @@ bmc_device_argp_parse (int argc, char **argv, struct bmc_device_arguments *cmd_a
   cmd_args->get_sel_time = 0;
   cmd_args->set_sel_time = 0;
   cmd_args->set_sel_time_arg = NULL;
+  cmd_args->get_sel_time_utc_offset = 0;
+  cmd_args->set_sel_time_utc_offset = 0;
+  cmd_args->set_sel_time_utc_offset_arg = NULL;
   cmd_args->platform_event = 0;
   cmd_args->platform_event_arg = NULL;
   cmd_args->set_sensor_reading_and_event_status = 0;
