@@ -212,6 +212,38 @@ FIID Template: tmpl_cmd_set_sel_time_rs
     { 8, "cmd", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
     { 8, "comp_code", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
 
+Get SEL Time UTC Offset Request
+-------------------------------
+
+FIID Template: tmpl_cmd_get_sel_time_utc_offset_rq
+
+    { 8, "cmd", REQUIRED, LENGTH-FIXED }
+
+Get SEL Time UTC Offset Response
+--------------------------------
+
+FIID Template: tmpl_cmd_get_sel_time_utc_offset_rs
+
+    { 8, "cmd", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
+    { 8, "comp_code", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
+    { 16, "offset", REQUIRED, LENGTH-FIXED }
+
+Set SEL Time UTC Offset Request
+-------------------------------
+
+FIID Template: tmpl_cmd_set_sel_time_utc_offset_rq
+
+    { 8, "cmd", REQUIRED, LENGTH-FIXED }
+    { 16, "offset", REQUIRED, LENGTH-FIXED }
+
+Set SEL Time UTC Offset Response
+--------------------------------
+
+FIID Template: tmpl_cmd_set_sel_time_utc_offset_rs
+
+    { 8, "cmd", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
+    { 8, "comp_code", REQUIRED, LENGTH-FIXED, MAKES-PACKET-SUFFICIENT }
+
 Get Auxiliary Log Status Request
 --------------------------------
 
